add video pause and sound

--- a/src/index.html
+++ b/src/index.html
@@ -11,22 +11,24 @@
         <h1 class="title">С Днем Рождения! 🎉</h1>
 
         <div class="video-section">
-            <video src="assets/video1.mp4" autoplay loop muted class="fade-in"></video>
+            <video id="video1" src="assets/video1.mp4"></video>
+            <button class="play-button" onclick="togglePlay('video1')">▶ Играть</button>
             <p class="caption">Когда ты опоздал на работу, но делаешь вид, что всё нормально</p>
         </div>
 
         <div class="video-section">
-            <video src="assets/video2.mp4" autoplay loop muted class="fade-in"></video>
+            <video id="video2" src="assets/video2.mp4"></video>
+            <button class="play-button" onclick="togglePlay('video2')">▶ Играть</button>
             <p class="caption">Когда друг говорит: "Я знаю короткую дорогу"</p>
         </div>
 
         <div class="image-section">
-            <img src="assets/image1.jpg" alt="Смешная картинка" class="fade-in">
+            <img src="assets/image1.jpg" alt="Смешная картинка">
             <p class="caption">Когда пытаешься понять, почему код не работает</p>
         </div>
 
         <div class="image-section">
-            <img src="assets/image2.jpg" alt="Еще одна картинка" class="fade-in">
+            <img src="assets/image2.jpg" alt="Еще одна картинка">
             <p class="caption">Когда кто-то сказал "бесплатная пицца"</p>
         </div>
     </div>
