--- a/src/index.html
+++ b/src/index.html
@@ -11,25 +11,37 @@
         <h1 class="title">С Днем Рождения! 🎉</h1>
 
         <div class="video-section">
-            <video id="video1" src="assets/video1.mp4"></video>
-            <button class="play-button" onclick="togglePlay('video1')">▶ Играть</button>
-            <p class="caption">Когда ты опоздал на работу, но делаешь вид, что всё нормально</p>
+            <h2 class="caption">Кто такой этот ваш Георгий?</h2>
+            <p class="caption">11 марта родился этот замечательный молодой человек, или же, если не прибедняться: плейбой, филлантроп и миллиордер(в будущем).</p>
+            <p class="caption">Наверняка вы слышали об этой восходящей звезде. Этот юноша довольно популярен в тик токе, его аудитория на сегодняшний день составляет почти 25 тысяч подписчиков, а если быть точнее : </p>
+            <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@_ssxc1vd_" data-unique-id="_ssxc1vd_" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" > <section> <a target="_blank" href="https://www.tiktok.com/@_ssxc1vd_?refer=creator_embed">@_ssxc1vd_</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
         </div>
 
         <div class="video-section">
+            <h2 class="caption">Но что мы знаем о нем еще?</h2>
+            <p class="caption">Далее будет представлен ТОП из 10 фактов о немалоизвестном Георгии Гольденберге</p>
+        </div>
+
+        <div class="video-section">
+            <p class="caption">Когда ты опоздал на работу, но делаешь вид, что всё нормально</p>
+            <video id="video1" src="assets/video1.mp4"></video>
+            <button class="play-button" onclick="togglePlay('video1')">▶ Играть</button>
+        </div>
+
+        <div class="video-section">
+            <p class="caption">Когда друг говорит: "Я знаю короткую дорогу"</p>
             <video id="video2" src="assets/video2.mp4"></video>
             <button class="play-button" onclick="togglePlay('video2')">▶ Играть</button>
-            <p class="caption">Когда друг говорит: "Я знаю короткую дорогу"</p>
         </div>
 
         <div class="image-section">
-            <img src="assets/image1.jpg" alt="Смешная картинка">
             <p class="caption">Когда пытаешься понять, почему код не работает</p>
+            <img src="assets/image1.jpg" alt="Смешная картинка">
         </div>
 
         <div class="image-section">
-            <img src="assets/image2.jpg" alt="Еще одна картинка">
             <p class="caption">Когда кто-то сказал "бесплатная пицца"</p>
+            <img src="assets/image2.jpg" alt="Еще одна картинка">
         </div>
     </div>
 
