--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Смешные видео</title>
+    <title>кто такой этот ваш Георгий</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,25 +23,65 @@
         </div>
 
         <div class="video-section">
-            <p class="caption">Когда ты опоздал на работу, но делаешь вид, что всё нормально</p>
+            <p class="caption">1</p>
             <video id="video1" src="assets/video1.mp4"></video>
             <button class="play-button" onclick="togglePlay('video1')">▶ Играть</button>
         </div>
 
         <div class="video-section">
-            <p class="caption">Когда друг говорит: "Я знаю короткую дорогу"</p>
+            <p class="caption">2</p>
             <video id="video2" src="assets/video2.mp4"></video>
             <button class="play-button" onclick="togglePlay('video2')">▶ Играть</button>
         </div>
 
-        <div class="image-section">
-            <p class="caption">Когда пытаешься понять, почему код не работает</p>
-            <img src="assets/image1.jpg" alt="Смешная картинка">
+        <div class="video-section">
+            <p class="caption">3</p>
+            <video id="video3" src="assets/video3.mp4"></video>
+            <button class="play-button" onclick="togglePlay('video3')">▶ Играть</button>
+            <p class="caption">3-1</p>
+            <video id="video3-1" src="assets/video3-1.mp4"></video>
+            <button class="play-button" onclick="togglePlay('video3-1')">▶ Играть</button>
+        </div>
+
+        <div class="video-section">
+            <p class="caption">4</p>
+            <video id="video4" src="assets/video4.mp4"></video>
+            <button class="play-button" onclick="togglePlay('video4')">▶ Играть</button>
+        </div>
+
+        <div class="video-section">
+            <p class="caption">5</p>
+            <video id="video5" src="assets/video5.mp4"></video>
+            <button class="play-button" onclick="togglePlay('video5')">▶ Играть</button>
+        </div>
+
+        <div class="video-section">
+            <p class="caption">6</p>
+            <video id="video6" src="assets/video6.mp4"></video>
+            <button class="play-button" onclick="togglePlay('video6')">▶ Играть</button>
+        </div>
+
+        <div class="video-section">
+            <p class="caption">7</p>
+            <video id="video7" src="assets/video7.mp4"></video>
+            <button class="play-button" onclick="togglePlay('video7')">▶ Играть</button>
+        </div>
+
+        <div class="video-section">
+            <p class="caption">8</p>
+            <video id="video8" src="assets/video8.mp4"></video>
+            <button class="play-button" onclick="togglePlay('video8')">▶ Играть</button>
+        </div>
+
+        <div class="video-section">
+            <p class="caption">9</p>
+            <video id="video9" src="assets/video9.mp4"></video>
+            <button class="play-button" onclick="togglePlay('video9')">▶ Играть</button>
         </div>
 
         <div class="image-section">
-            <p class="caption">Когда кто-то сказал "бесплатная пицца"</p>
-            <img src="assets/image2.jpg" alt="Еще одна картинка">
+            <p class="caption">1</p>
+            <img src="assets/image1.jpg" alt="Смешная картинка">
         </div>
     </div>
 
