--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
         <div class="video-section">
             <h2 class="caption">Кто такой этот ваш Георгий?</h2>
-            <p class="caption">11 марта родился этот замечательный молодой человек, или же, если не прибедняться: плейбой, филлантроп и миллиордер(в будущем).</p>
+            <p class="caption">11 марта родился этот замечательный молодой человек, или же, если не прибедняться: плейбой, филантроп и миллиардер(в будущем).</p>
             <p class="caption">Наверняка вы слышали об этой восходящей звезде. Этот юноша довольно популярен в тик токе, его аудитория на сегодняшний день составляет почти 25 тысяч подписчиков, а если быть точнее : </p>
             <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@_ssxc1vd_" data-unique-id="_ssxc1vd_" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" > <section> <a target="_blank" href="https://www.tiktok.com/@_ssxc1vd_?refer=creator_embed">@_ssxc1vd_</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
         </div>
@@ -23,67 +23,78 @@
         </div>
 
         <div class="video-section">
-            <p class="caption">1</p>
+            <p class="caption">ну <b>во-первых</b>: он с легкостью составит вам конкуренцию в танцах, особенно если речь идет о тектонике</p>
             <video id="video1" src="assets/video1.mp4"></video>
             <button class="play-button" onclick="togglePlay('video1')">▶ Играть</button>
         </div>
 
         <div class="video-section">
-            <p class="caption">2</p>
+            <p class="caption"><b>во-вторых</b>: он ангел, но где же его крылья?</p>
             <video id="video2" src="assets/video2.mp4"></video>
             <button class="play-button" onclick="togglePlay('video2')">▶ Играть</button>
         </div>
 
         <div class="video-section">
-            <p class="caption">3</p>
+            <p class="caption"><b>в-третьих</b>: он всегда поддержит, вы легко можете звонить ему в любое время дня и ночи, но есть одно но...</p>
             <video id="video3" src="assets/video3.mp4"></video>
             <button class="play-button" onclick="togglePlay('video3')">▶ Играть</button>
-            <p class="caption">3-1</p>
+            <p class="caption">И тем не менее он поднимет трубку, даже если вы звоните ему в рабочее время и даже если это домофон</p>
             <video id="video3-1" src="assets/video3-1.mp4"></video>
             <button class="play-button" onclick="togglePlay('video3-1')">▶ Играть</button>
         </div>
 
         <div class="video-section">
-            <p class="caption">4</p>
+            <p class="caption"><b>в-четвертых</b>: Гоша - приятный мальчик, культурный. И это сказал не абы кто, а бабушка Жариковой Анастасии. Ну, или как сказал ее же дедушка : </p>
+            <blockquote class="quote">
+                «А этот малый шарит в хорошей музыке»
+                <span class="quote-author">— дедушка Жариковой Анастасии</span>
+            </blockquote>
             <video id="video4" src="assets/video4.mp4"></video>
             <button class="play-button" onclick="togglePlay('video4')">▶ Играть</button>
         </div>
 
         <div class="video-section">
-            <p class="caption">5</p>
+            <p class="caption"><b>в-пятых</b>: Жора мальчик впечатлительный, его легко удивить, достаточно одной маленькой детали (ну или не совсем маленькой...)</p>
             <video id="video5" src="assets/video5.mp4"></video>
             <button class="play-button" onclick="togglePlay('video5')">▶ Играть</button>
         </div>
 
         <div class="video-section">
-            <p class="caption">6</p>
+            <p class="caption"><b>в-шестых</b>: споры о национальной пренадлежности Георгия не утихают ни на миг.</p>
+            <p class="caption">Кто он? Белорус, еврей, африканец или может быть шотландец? Этот вопрос будоражит умы многих...</p>
             <video id="video6" src="assets/video6.mp4"></video>
             <button class="play-button" onclick="togglePlay('video6')">▶ Играть</button>
         </div>
 
         <div class="video-section">
-            <p class="caption">7</p>
+            <p class="caption"><b>в-седьмых</b>: аркан Георгия "Император" и если вам это ни о чем не говорит, то он сам вам все пояснит</p>
             <video id="video7" src="assets/video7.mp4"></video>
             <button class="play-button" onclick="togglePlay('video7')">▶ Играть</button>
         </div>
 
         <div class="video-section">
-            <p class="caption">8</p>
+            <p class="caption"><b>в-восьмых</b>: Джордж - парень,который делится хорошим настроением и зарядит своими эмоциями. Кстати, вот эмоция, которую он использует чаще всего</p>
             <video id="video8" src="assets/video8.mp4"></video>
             <button class="play-button" onclick="togglePlay('video8')">▶ Играть</button>
         </div>
 
         <div class="video-section">
-            <p class="caption">9</p>
+            <p class="caption"><b>в-девятых</b>: Гошан вообще очень щедрый и ответственный, поэтому он всегда вовремя возвращает деньги, которые взял в долг.</p>
+            <p class="caption">Но иногда он бывает слишком увлечен. Например игрой на гитаре</p>
             <video id="video9" src="assets/video9.mp4"></video>
             <button class="play-button" onclick="togglePlay('video9')">▶ Играть</button>
         </div>
 
         <div class="image-section">
-            <p class="caption">1</p>
-            <img src="assets/image1.jpg" alt="Смешная картинка">
+            <p class="caption">ну и <b>в-десятых</b>: он просто царь, ну кто бы сомневался</p>
+            <img src="assets/image1.jpg" alt="царь">
+        </div>
+
+        <div class="video-section">
+            <p class="caption">Подводя итог, мы можем сделать следующий вывод: Георгий - забавный парень, с которым никогда не будет скучно. Он определённо является душой компании, человеком, подбивающим толпу на различного рода авантюры. Кажется, у него действительно хороший дар убеждения, ведь именно он позвонит тебе ночью и вытащит в дебри если ему это будет необходимо. Харизма - это его сильная сторона, которая при определенных обстоятельствах становится нехитрым оружием в умелых руках. Его смело можно назвать рыцарем, потому что именно он является тем, кто не побоится заступиться за даму в беде темной ночью. Он тот, кто сможет прийти на помощь тогда, когда это действительно будет необходимо. Он тот, кто сможет поднять тебе настроение даже тогда, когда это кажется невозможным. Он тот, с кем можно и поговорить по душам, и поплакать и посмеяться. Он тот, кого ты точно запомнишь, пообщавщись с ним хотябы однажды. И пусть иногда его можно назвать настоящей занозой в одном месте, это не делает его плохим. Он - Георгий Гольденберг и пусть он остается таким.</p>
         </div>
     </div>
+
 
     <script src="script.js"></script>
 </body>
