--- a/src/index.html
+++ b/src/index.html
@@ -24,64 +24,64 @@
 
         <div class="video-section">
             <p class="caption">ну <b>во-первых</b>: он с легкостью составит вам конкуренцию в танцах, особенно если речь идет о тектонике</p>
-            <video id="video1" src="assets/video1.mp4"></video>
+            <video id="video1" src="assets/video1.mp4" loop></video>
             <button class="play-button" onclick="togglePlay('video1')">▶ Играть</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>во-вторых</b>: он ангел, но где же его крылья?</p>
-            <video id="video2" src="assets/video2.mp4"></video>
+            <video id="video2" src="assets/video2.mp4" loop></video>
             <button class="play-button" onclick="togglePlay('video2')">▶ Играть</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-третьих</b>: он всегда поддержит, вы легко можете звонить ему в любое время дня и ночи, но есть одно но...</p>
-            <video id="video3" src="assets/video3.mp4"></video>
+            <video id="video3" src="assets/video3.mp4" loop></video>
             <button class="play-button" onclick="togglePlay('video3')">▶ Играть</button>
             <p class="caption">И тем не менее он поднимет трубку, даже если вы звоните ему в рабочее время и даже если это домофон</p>
-            <video id="video3-1" src="assets/video3-1.mp4"></video>
+            <video id="video3-1" src="assets/video3-1.mp4" loop></video>
             <button class="play-button" onclick="togglePlay('video3-1')">▶ Играть</button>
         </div>
 
         <div class="video-section">
-            <p class="caption"><b>в-четвертых</b>: Гоша - приятный мальчик, культурный. И это сказал не абы кто, а бабушка Жариковой Анастасии. Ну, или как сказал ее же дедушка : </p>
+            <p class="caption"><b>в-четвертых</b>: Гоша - приятный мальчик, культурный. И это сказал не абы-кто, а бабушка Жариковой Анастасии. Ну, или как сказал ее же дедушка : </p>
             <blockquote class="quote">
                 «А этот малый шарит в хорошей музыке»
                 <span class="quote-author">— дедушка Жариковой Анастасии</span>
             </blockquote>
-            <video id="video4" src="assets/video4.mp4"></video>
+            <video id="video4" src="assets/video4.mp4" loop></video>
             <button class="play-button" onclick="togglePlay('video4')">▶ Играть</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-пятых</b>: Жора мальчик впечатлительный, его легко удивить, достаточно одной маленькой детали (ну или не совсем маленькой...)</p>
-            <video id="video5" src="assets/video5.mp4"></video>
+            <video id="video5" src="assets/video5.mp4" loop></video>
             <button class="play-button" onclick="togglePlay('video5')">▶ Играть</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-шестых</b>: споры о национальной пренадлежности Георгия не утихают ни на миг.</p>
             <p class="caption">Кто он? Белорус, еврей, африканец или может быть шотландец? Этот вопрос будоражит умы многих...</p>
-            <video id="video6" src="assets/video6.mp4"></video>
+            <video id="video6" src="assets/video6.mp4" loop></video>
             <button class="play-button" onclick="togglePlay('video6')">▶ Играть</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-седьмых</b>: аркан Георгия "Император" и если вам это ни о чем не говорит, то он сам вам все пояснит</p>
-            <video id="video7" src="assets/video7.mp4"></video>
+            <video id="video7" src="assets/video7.mp4" loop></video>
             <button class="play-button" onclick="togglePlay('video7')">▶ Играть</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-восьмых</b>: Джордж - парень,который делится хорошим настроением и зарядит своими эмоциями. Кстати, вот эмоция, которую он использует чаще всего</p>
-            <video id="video8" src="assets/video8.mp4"></video>
+            <video id="video8" src="assets/video8.mp4" loop></video>
             <button class="play-button" onclick="togglePlay('video8')">▶ Играть</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-девятых</b>: Гошан вообще очень щедрый и ответственный, поэтому он всегда вовремя возвращает деньги, которые взял в долг.</p>
             <p class="caption">Но иногда он бывает слишком увлечен. Например игрой на гитаре</p>
-            <video id="video9" src="assets/video9.mp4"></video>
+            <video id="video9" src="assets/video9.mp4" loop></video>
             <button class="play-button" onclick="togglePlay('video9')">▶ Играть</button>
         </div>
 
