--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="video-section">
-            <p class="caption"><b>в-четвертых</b>: Гоша - приятный мальчик, культурный. И это сказал не абы-кто, а бабушка Жариковой Анастасии. Ну, или как сказал ее же дедушка : </p>
+            <p class="caption"><b>в-четвертых</b>: Гоша – приятный мальчик, культурный. И это сказал не абы-кто, а бабушка Жариковой Анастасии. Ну, или как сказал ее же дедушка : </p>
             <blockquote class="quote">
                 «А этот малый шарит в хорошей музыке»
                 <span class="quote-author">— дедушка Жариковой Анастасии</span>
@@ -73,7 +73,7 @@
         </div>
 
         <div class="video-section">
-            <p class="caption"><b>в-восьмых</b>: Джордж - парень,который делится хорошим настроением и зарядит своими эмоциями. Кстати, вот эмоция, которую он использует чаще всего</p>
+            <p class="caption"><b>в-восьмых</b>: Джордж – парень,который делится хорошим настроением и заряжает своими эмоциями. Кстати, вот эмоция, которую он использует чаще всего</p>
             <video id="video8" src="assets/video8.mp4" loop></video>
             <button class="play-button" onclick="togglePlay('video8')">▶ Играть</button>
         </div>
@@ -91,7 +91,7 @@
         </div>
 
         <div class="video-section">
-            <p class="caption">Подводя итог, мы можем сделать следующий вывод: Георгий - забавный парень, с которым никогда не будет скучно. Он определённо является душой компании, человеком, подбивающим толпу на различного рода авантюры. Кажется, у него действительно хороший дар убеждения, ведь именно он позвонит тебе ночью и вытащит в дебри если ему это будет необходимо. Харизма - это его сильная сторона, которая при определенных обстоятельствах становится нехитрым оружием в умелых руках. Его смело можно назвать рыцарем, потому что именно он является тем, кто не побоится заступиться за даму в беде темной ночью. Он тот, кто сможет прийти на помощь тогда, когда это действительно будет необходимо. Он тот, кто сможет поднять тебе настроение даже тогда, когда это кажется невозможным. Он тот, с кем можно и поговорить по душам, и поплакать и посмеяться. Он тот, кого ты точно запомнишь, пообщавщись с ним хотябы однажды. И пусть иногда его можно назвать настоящей занозой в одном месте, это не делает его плохим. Он - Георгий Гольденберг и пусть он остается таким.</p>
+            <p class="caption">Подводя итог, мы можем сделать следующий вывод: Георгий – забавный парень, с которым никогда не будет скучно. Он определённо является душой компании, человеком, подбивающим толпу на различного рода авантюры. Кажется, у него действительно хороший дар убеждения, ведь именно он позвонит тебе ночью и вытащит в дебри если ему это будет необходимо. Харизма – это его сильная сторона, которая при определенных обстоятельствах становится нехитрым оружием в умелых руках. Его смело можно назвать рыцарем, потому что именно он является тем, кто не побоится заступиться за даму в беде темной ночью. Он тот, кто сможет прийти на помощь тогда, когда это действительно будет необходимо. Он тот, кто сможет поднять тебе настроение даже тогда, когда это кажется невозможным. Он тот, с кем можно и поговорить по душам, и поплакать и посмеяться. Он тот, кого ты точно запомнишь, пообщавщись с ним хотябы однажды. И пусть иногда его можно назвать настоящей занозой в одном месте, это не делает его плохим. Он – Георгий Гольденберг и пусть он остается таким.</p>
         </div>
     </div>
 
