add facts design

--- a/src/index.html
+++ b/src/index.html
@@ -60,27 +60,28 @@
         </div>
 
         <div class="video-section">
-            <p class="caption"><b>в-шестых</b>: споры о национальной пренадлежности Георгия не утихают ни на миг.</p>
+            <p class="caption"><b>в-шестых</b>: споры о национальной принадлежности Георгия не утихают ни на миг.</p>
             <p class="caption">Кто он? Белорус, еврей, африканец или может быть шотландец? Этот вопрос будоражит умы многих...</p>
             <video id="video6" src="assets/video6.mp4" loop></video>
             <button class="play-button" onclick="togglePlay('video6')">▶ Играть</button>
         </div>
 
         <div class="video-section">
-            <p class="caption"><b>в-седьмых</b>: аркан Георгия "Император" и если вам это ни о чем не говорит, то он сам вам все пояснит</p>
+            <p class="caption"><b>в-седьмых</b>: аркан Георгия "Император", и если вам это ни о чем не говорит, то он сам вам все пояснит</p>
             <video id="video7" src="assets/video7.mp4" loop></video>
             <button class="play-button" onclick="togglePlay('video7')">▶ Играть</button>
         </div>
 
         <div class="video-section">
-            <p class="caption"><b>в-восьмых</b>: Джордж – парень,который делится хорошим настроением и заряжает своими эмоциями. Кстати, вот эмоция, которую он использует чаще всего</p>
+            <p class="caption"><b>в-восьмых</b>: Джордж – парень, который делится хорошим настроением и заряжает своими эмоциями.
+                <br>Кстати, вот эмоция, которую он использует чаще всего</p>
             <video id="video8" src="assets/video8.mp4" loop></video>
             <button class="play-button" onclick="togglePlay('video8')">▶ Играть</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-девятых</b>: Гошан вообще очень щедрый и ответственный, поэтому он всегда вовремя возвращает деньги, которые взял в долг.</p>
-            <p class="caption">Но иногда он бывает слишком увлечен. Например игрой на гитаре</p>
+            <p class="caption">Но иногда он бывает слишком увлечен. Например, игрой на гитаре</p>
             <video id="video9" src="assets/video9.mp4" loop></video>
             <button class="play-button" onclick="togglePlay('video9')">▶ Играть</button>
         </div>
@@ -91,10 +92,32 @@
         </div>
 
         <div class="video-section">
-            <p class="caption">Подводя итог, мы можем сделать следующий вывод: Георгий – забавный парень, с которым никогда не будет скучно. Он определённо является душой компании, человеком, подбивающим толпу на различного рода авантюры. Кажется, у него действительно хороший дар убеждения, ведь именно он позвонит тебе ночью и вытащит в дебри если ему это будет необходимо. Харизма – это его сильная сторона, которая при определенных обстоятельствах становится нехитрым оружием в умелых руках. Его смело можно назвать рыцарем, потому что именно он является тем, кто не побоится заступиться за даму в беде темной ночью. Он тот, кто сможет прийти на помощь тогда, когда это действительно будет необходимо. Он тот, кто сможет поднять тебе настроение даже тогда, когда это кажется невозможным. Он тот, с кем можно и поговорить по душам, и поплакать и посмеяться. Он тот, кого ты точно запомнишь, пообщавщись с ним хотябы однажды. И пусть иногда его можно назвать настоящей занозой в одном месте, это не делает его плохим. Он – Георгий Гольденберг и пусть он остается таким.</p>
+            <p>
+                Подводя итог, мы можем сделать следующий вывод:
+                <br><strong>Георгий – забавный парень, с которым никогда не будет скучно.</strong>
+                <br>Он определённо является душой компании, человеком, подбивающим толпу на различного рода авантюры.
+                <br>Кажется, у него действительно хороший дар убеждения, ведь именно он позвонит тебе ночью и вытащит в дебри, если ему это будет необходимо.
+            </p>
+            <p>
+                <strong>Харизма – это его сильная сторона</strong>, которая при определённых обстоятельствах становится нехитрым оружием в умелых руках.
+                <br>Его смело можно назвать рыцарем, потому что именно он является тем, кто не побоится заступиться за даму в беде тёмной ночью.
+            </p>
+            <p>
+                Он тот, кто сможет прийти на помощь тогда, когда это действительно будет необходимо.
+                <br>Он тот, кто сможет поднять тебе настроение даже тогда, когда это кажется невозможным.
+                <br>Он тот, с кем можно и поговорить по душам, и поплакать, и посмеяться.
+            </p>
+            <p>
+                Он тот, кого ты точно запомнишь, пообщавщись с ним хотя бы однажды.
+                <br>И пусть иногда его можно назвать настоящей занозой в одном месте, это не делает его плохим.
+            </p>
+            <p>
+                <span class="final-quote">
+                Он – <strong>Георгий Гольденберг</strong>, и пусть он остаётся таким.
+                </span>
+            </p>
         </div>
     </div>
-
 
     <script src="script.js"></script>
 </body>
