restyle to green&black

--- a/src/index.html
+++ b/src/index.html
@@ -8,39 +8,39 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">С Днем Рождения! 🎉</h1>
+        <h1 class="title">С ДНЕМ РОЖДЕНИЯ! 🎉</h1>
 
         <div class="video-section">
-            <h2 class="caption">Кто такой этот ваш Георгий?</h2>
+            <h2 class="title">КТО ТАКОЙ ЭТОТ ВАШ ГЕОРГИЙ?</h2>
             <p class="caption">11 марта родился этот замечательный молодой человек, или же, если не прибедняться: плейбой, филантроп и миллиардер(в будущем).</p>
             <p class="caption">Наверняка вы слышали об этой восходящей звезде. Этот юноша довольно популярен в тик токе, его аудитория на сегодняшний день составляет почти 25 тысяч подписчиков, а если быть точнее : </p>
             <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@_ssxc1vd_" data-unique-id="_ssxc1vd_" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" > <section> <a target="_blank" href="https://www.tiktok.com/@_ssxc1vd_?refer=creator_embed">@_ssxc1vd_</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
         </div>
 
         <div class="video-section">
-            <h2 class="caption">Но что мы знаем о нем еще?</h2>
+            <h2 class="title">НО ЧТО МЫ ЗНАЕМ О НЕМ ЕЩЕ?</h2>
             <p class="caption">Далее будет представлен ТОП из 10 фактов о немалоизвестном Георгии Гольденберге</p>
         </div>
 
         <div class="video-section">
             <p class="caption">ну <b>во-первых</b>: он с легкостью составит вам конкуренцию в танцах, особенно если речь идет о тектонике</p>
-            <video id="video1" src="assets/video1.mp4" loop></video>
-            <button class="play-button" onclick="togglePlay('video1')">▶ Играть</button>
+            <video id="video1" src="assets/videos/video1.mp4" loop></video>
+            <button class="play-button" onclick="togglePlay('video1')">ИГРАТЬ</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>во-вторых</b>: он ангел, но где же его крылья?</p>
-            <video id="video2" src="assets/video2.mp4" loop></video>
-            <button class="play-button" onclick="togglePlay('video2')">▶ Играть</button>
+            <video id="video2" src="assets/videos/video2.mp4" loop></video>
+            <button class="play-button" onclick="togglePlay('video2')">ИГРАТЬ</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-третьих</b>: он всегда поддержит, вы легко можете звонить ему в любое время дня и ночи, но есть одно но...</p>
-            <video id="video3" src="assets/video3.mp4" loop></video>
-            <button class="play-button" onclick="togglePlay('video3')">▶ Играть</button>
+            <video id="video3" src="assets/videos/video3.mp4" loop></video>
+            <button class="play-button" onclick="togglePlay('video3')">ИГРАТЬ</button>
             <p class="caption">И тем не менее он поднимет трубку, даже если вы звоните ему в рабочее время и даже если это домофон</p>
-            <video id="video3-1" src="assets/video3-1.mp4" loop></video>
-            <button class="play-button" onclick="togglePlay('video3-1')">▶ Играть</button>
+            <video id="video3-1" src="assets/videos/video3-1.mp4" loop></video>
+            <button class="play-button" onclick="togglePlay('video3-1')">ИГРАТЬ</button>
         </div>
 
         <div class="video-section">
@@ -49,69 +49,69 @@
                 «А этот малый шарит в хорошей музыке»
                 <span class="quote-author">— дедушка Жариковой Анастасии</span>
             </blockquote>
-            <video id="video4" src="assets/video4.mp4" loop></video>
-            <button class="play-button" onclick="togglePlay('video4')">▶ Играть</button>
+            <video id="video4" src="assets/videos/video4.mp4" loop></video>
+            <button class="play-button" onclick="togglePlay('video4')">ИГРАТЬ</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-пятых</b>: Жора мальчик впечатлительный, его легко удивить, достаточно одной маленькой детали (ну или не совсем маленькой...)</p>
-            <video id="video5" src="assets/video5.mp4" loop></video>
-            <button class="play-button" onclick="togglePlay('video5')">▶ Играть</button>
+            <video id="video5" src="assets/videos/video5.mp4" loop></video>
+            <button class="play-button" onclick="togglePlay('video5')">ИГРАТЬ</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-шестых</b>: споры о национальной принадлежности Георгия не утихают ни на миг.</p>
             <p class="caption">Кто он? Белорус, еврей, африканец или может быть шотландец? Этот вопрос будоражит умы многих...</p>
-            <video id="video6" src="assets/video6.mp4" loop></video>
-            <button class="play-button" onclick="togglePlay('video6')">▶ Играть</button>
+            <video id="video6" src="assets/videos/video6.mp4" loop></video>
+            <button class="play-button" onclick="togglePlay('video6')">ИГРАТЬ</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-седьмых</b>: аркан Георгия "Император", и если вам это ни о чем не говорит, то он сам вам все пояснит</p>
-            <video id="video7" src="assets/video7.mp4" loop></video>
-            <button class="play-button" onclick="togglePlay('video7')">▶ Играть</button>
+            <video id="video7" src="assets/videos/video7.mp4" loop></video>
+            <button class="play-button" onclick="togglePlay('video7')">ИГРАТЬ</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-восьмых</b>: Джордж – парень, который делится хорошим настроением и заряжает своими эмоциями.
                 <br>Кстати, вот эмоция, которую он использует чаще всего</p>
-            <video id="video8" src="assets/video8.mp4" loop></video>
-            <button class="play-button" onclick="togglePlay('video8')">▶ Играть</button>
+            <video id="video8" src="assets/videos/video8.mp4" loop></video>
+            <button class="play-button" onclick="togglePlay('video8')">ИГРАТЬ</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-девятых</b>: Гошан вообще очень щедрый и ответственный, поэтому он всегда вовремя возвращает деньги, которые взял в долг.</p>
             <p class="caption">Но иногда он бывает слишком увлечен. Например, игрой на гитаре</p>
-            <video id="video9" src="assets/video9.mp4" loop></video>
-            <button class="play-button" onclick="togglePlay('video9')">▶ Играть</button>
+            <video id="video9" src="assets/videos/video9.mp4" loop></video>
+            <button class="play-button" onclick="togglePlay('video9')">ИГРАТЬ</button>
         </div>
 
         <div class="image-section">
             <p class="caption">ну и <b>в-десятых</b>: он просто царь, ну кто бы сомневался</p>
-            <img src="assets/image1.jpg" alt="царь">
+            <img src="assets/images/image1.jpg" alt="царь">
         </div>
 
         <div class="video-section">
-            <p>
+            <p class="caption">
                 Подводя итог, мы можем сделать следующий вывод:
                 <br><strong>Георгий – забавный парень, с которым никогда не будет скучно.</strong>
                 <br>Он определённо является душой компании, человеком, подбивающим толпу на различного рода авантюры.
                 <br>Кажется, у него действительно хороший дар убеждения, ведь именно он позвонит тебе ночью и вытащит в дебри, если ему это будет необходимо.
             </p>
-            <p>
+            <p class="caption">
                 <strong>Харизма – это его сильная сторона</strong>, которая при определённых обстоятельствах становится нехитрым оружием в умелых руках.
                 <br>Его смело можно назвать рыцарем, потому что именно он является тем, кто не побоится заступиться за даму в беде тёмной ночью.
             </p>
-            <p>
+            <p class="caption">
                 Он тот, кто сможет прийти на помощь тогда, когда это действительно будет необходимо.
                 <br>Он тот, кто сможет поднять тебе настроение даже тогда, когда это кажется невозможным.
                 <br>Он тот, с кем можно и поговорить по душам, и поплакать, и посмеяться.
             </p>
-            <p>
+            <p class="caption">
                 Он тот, кого ты точно запомнишь, пообщавщись с ним хотя бы однажды.
                 <br>И пусть иногда его можно назвать настоящей занозой в одном месте, это не делает его плохим.
             </p>
-            <p>
+            <p class="caption">
                 <span class="final-quote">
                 Он – <strong>Георгий Гольденберг</strong>, и пусть он остаётся таким.
                 </span>
