remove video autoplay

--- a/src/index.html
+++ b/src/index.html
@@ -24,22 +24,22 @@
 
         <div class="video-section">
             <p class="caption">ну <b>во-первых</b>: он с легкостью составит вам конкуренцию в танцах, особенно если речь идет о тектонике</p>
-            <video id="video1" src="assets/videos/video1.mp4" loop></video>
+            <video id="video1" src="assets/videos/video1.mp4"></video>
             <button class="play-button" onclick="togglePlay('video1')">ИГРАТЬ</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>во-вторых</b>: он ангел, но где же его крылья?</p>
-            <video id="video2" src="assets/videos/video2.mp4" loop></video>
+            <video id="video2" src="assets/videos/video2.mp4"></video>
             <button class="play-button" onclick="togglePlay('video2')">ИГРАТЬ</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-третьих</b>: он всегда поддержит, вы легко можете звонить ему в любое время дня и ночи, но есть одно но...</p>
-            <video id="video3" src="assets/videos/video3.mp4" loop></video>
+            <video id="video3" src="assets/videos/video3.mp4"></video>
             <button class="play-button" onclick="togglePlay('video3')">ИГРАТЬ</button>
             <p class="caption">И тем не менее он поднимет трубку, даже если вы звоните ему в рабочее время и даже если это домофон</p>
-            <video id="video3-1" src="assets/videos/video3-1.mp4" loop></video>
+            <video id="video3-1" src="assets/videos/video3-1.mp4"></video>
             <button class="play-button" onclick="togglePlay('video3-1')">ИГРАТЬ</button>
         </div>
 
@@ -49,40 +49,40 @@
                 «А этот малый шарит в хорошей музыке»
                 <span class="quote-author">— дедушка Жариковой Анастасии</span>
             </blockquote>
-            <video id="video4" src="assets/videos/video4.mp4" loop></video>
+            <video id="video4" src="assets/videos/video4.mp4"></video>
             <button class="play-button" onclick="togglePlay('video4')">ИГРАТЬ</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-пятых</b>: Жора мальчик впечатлительный, его легко удивить, достаточно одной маленькой детали (ну или не совсем маленькой...)</p>
-            <video id="video5" src="assets/videos/video5.mp4" loop></video>
+            <video id="video5" src="assets/videos/video5.mp4"></video>
             <button class="play-button" onclick="togglePlay('video5')">ИГРАТЬ</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-шестых</b>: споры о национальной принадлежности Георгия не утихают ни на миг.</p>
             <p class="caption">Кто он? Белорус, еврей, африканец или может быть шотландец? Этот вопрос будоражит умы многих...</p>
-            <video id="video6" src="assets/videos/video6.mp4" loop></video>
+            <video id="video6" src="assets/videos/video6.mp4"></video>
             <button class="play-button" onclick="togglePlay('video6')">ИГРАТЬ</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-седьмых</b>: аркан Георгия "Император", и если вам это ни о чем не говорит, то он сам вам все пояснит</p>
-            <video id="video7" src="assets/videos/video7.mp4" loop></video>
+            <video id="video7" src="assets/videos/video7.mp4"></video>
             <button class="play-button" onclick="togglePlay('video7')">ИГРАТЬ</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-восьмых</b>: Джордж – парень, который делится хорошим настроением и заряжает своими эмоциями.
                 <br>Кстати, вот эмоция, которую он использует чаще всего</p>
-            <video id="video8" src="assets/videos/video8.mp4" loop></video>
+            <video id="video8" src="assets/videos/video8.mp4"></video>
             <button class="play-button" onclick="togglePlay('video8')">ИГРАТЬ</button>
         </div>
 
         <div class="video-section">
             <p class="caption"><b>в-девятых</b>: Гошан вообще очень щедрый и ответственный, поэтому он всегда вовремя возвращает деньги, которые взял в долг.</p>
             <p class="caption">Но иногда он бывает слишком увлечен. Например, игрой на гитаре</p>
-            <video id="video9" src="assets/videos/video9.mp4" loop></video>
+            <video id="video9" src="assets/videos/video9.mp4"></video>
             <button class="play-button" onclick="togglePlay('video9')">ИГРАТЬ</button>
         </div>
 
